[gd_scene load_steps=9 format=3 uid="uid://b6010fhhdn46b"]

[ext_resource type="Script" path="res://Scripts/UI/MainMenu.gd" id="1_xwo58"]
[ext_resource type="Texture2D" uid="uid://boboxmvoqy61t" path="res://Assets/Menu/MainMenuForeground.png" id="2_647vp"]
[ext_resource type="FontFile" uid="uid://c5notad62nmgy" path="res://Assets/Fonts/SansNormalcy/Normalcy-v0.1.7.otf" id="3_lej4w"]
[ext_resource type="Theme" uid="uid://4k2un7nm7xc6" path="res://UITheme.tres" id="5_gi3lh"]
[ext_resource type="PackedScene" uid="uid://bjbe75eis8tu6" path="res://Scenes/Settings.tscn" id="6_0nqn5"]
[ext_resource type="Texture2D" uid="uid://cplgika3kesri" path="res://UI/back_button.png" id="10_h2lxg"]
[ext_resource type="Texture2D" uid="uid://ccnlq2hm3wbsa" path="res://UI/back_button_disabled.png" id="11_uc1g4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iyayx"]
bg_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xwo58")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="Foreground" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_647vp")
expand_mode = 1

[node name="Title" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 8.0
offset_right = 448.0
grow_vertical = 2
theme_override_constants/separation = 48

[node name="Label" type="Label" parent="Title"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_lej4w")
theme_override_font_sizes/font_size = 48
text = "SCP: Containing
Procedures"

[node name="Play" type="Button" parent="Title"]
layout_mode = 2
theme = ExtResource("5_gi3lh")
theme_override_font_sizes/font_size = 24
text = "PLAY"

[node name="Settings" type="Button" parent="Title"]
layout_mode = 2
theme = ExtResource("5_gi3lh")
theme_override_font_sizes/font_size = 24
text = "SETTINGS"

[node name="Credits" type="Button" parent="Title"]
layout_mode = 2
theme = ExtResource("5_gi3lh")
theme_override_font_sizes/font_size = 24
text = "CREDITS"

[node name="Exit" type="Button" parent="Title"]
layout_mode = 2
theme = ExtResource("5_gi3lh")
theme_override_font_sizes/font_size = 24
text = "EXIT"

[node name="Settings" parent="." instance=ExtResource("6_0nqn5")]
visible = false

[node name="CreditsPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_iyayx")

[node name="CreditsBack" type="TextureButton" parent="CreditsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.067
anchor_top = 0.119
anchor_right = 0.067
anchor_bottom = 0.119
offset_left = -64.64
offset_top = -64.52
offset_right = 63.36
offset_bottom = 63.48
texture_normal = ExtResource("10_h2lxg")
texture_pressed = ExtResource("10_h2lxg")
texture_hover = ExtResource("10_h2lxg")
texture_disabled = ExtResource("11_uc1g4")
texture_focused = ExtResource("10_h2lxg")

[node name="ScrollContainer" type="ScrollContainer" parent="CreditsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -476.0
offset_right = 640.0
offset_bottom = 484.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CreditsPanel/ScrollContainer"]
layout_mode = 2

[node name="CreditsMain" type="RichTextLabel" parent="CreditsPanel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(1234, 0)
layout_mode = 2
theme_override_font_sizes/bold_italics_font_size = 24
theme_override_font_sizes/italics_font_size = 24
theme_override_font_sizes/mono_font_size = 24
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "[b]SCP Demo[/b]


"
fit_content = true

[node name="CreditsMain4" type="RichTextLabel" parent="CreditsPanel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(1234, 0)
layout_mode = 2
theme_override_font_sizes/bold_italics_font_size = 24
theme_override_font_sizes/italics_font_size = 24
theme_override_font_sizes/mono_font_size = 24
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "[b]Based on TGPY and SCP: Site Online code[/b]


"
fit_content = true

[node name="CreditsMain2" type="RichTextLabel" parent="CreditsPanel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(1234, 0)
layout_mode = 2
theme_override_font_sizes/bold_italics_font_size = 24
theme_override_font_sizes/italics_font_size = 24
theme_override_font_sizes/mono_font_size = 24
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "[color=#84D9FF][i]Contributors:[/i]
- Yni (Yni Viar, the Creator)
- Xandromeda[/color]


[color=green] Many thanks for testers, which pointed me at bugs:
- William[]
- cherniichernish
- The1Wolfcast[/color]


"
fit_content = true

[node name="CreditsMain3" type="RichTextLabel" parent="CreditsPanel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(1234, 0)
layout_mode = 2
theme_override_font_sizes/bold_italics_font_size = 24
theme_override_font_sizes/italics_font_size = 24
theme_override_font_sizes/mono_font_size = 24
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "[b]Third-party data credits:[/b]"
fit_content = true

[node name="CreditsCode" type="RichTextLabel" parent="CreditsPanel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(1234, 0)
layout_mode = 2
theme_override_font_sizes/bold_italics_font_size = 24
theme_override_font_sizes/italics_font_size = 24
theme_override_font_sizes/mono_font_size = 24
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "[b]Code:[/b]"
fit_content = true

[node name="CreditsCode2" type="RichTextLabel" parent="CreditsPanel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(1234, 0)
layout_mode = 2
theme_override_font_sizes/bold_italics_font_size = 24
theme_override_font_sizes/italics_font_size = 24
theme_override_font_sizes/mono_font_size = 24
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "[i]First person character (license - The Unlicense)[/i]

- Originally made by [dzejpi](https://github.com/dzejpi/godot-3d-base-project),
 then I (Yni) merged some code from elmarcoh's FPS script (also public domain),
 and now I added some code.


"
fit_content = true

[node name="CreditsCode3" type="RichTextLabel" parent="CreditsPanel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(1234, 0)
layout_mode = 2
theme_override_font_sizes/bold_italics_font_size = 24
theme_override_font_sizes/italics_font_size = 24
theme_override_font_sizes/mono_font_size = 24
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "[i]Free look camera (license - MIT License)[/i]

Copyright Â© 2022 Marc Nahr


"
fit_content = true

[node name="CreditsCode4" type="RichTextLabel" parent="CreditsPanel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(1234, 0)
layout_mode = 2
theme_override_font_sizes/bold_italics_font_size = 24
theme_override_font_sizes/italics_font_size = 24
theme_override_font_sizes/mono_font_size = 24
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "[i]Debug console (License - The Unlicense)[/i]

- Made by USBashka

"
fit_content = true

[node name="CreditsCode5" type="RichTextLabel" parent="CreditsPanel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(1234, 0)
layout_mode = 2
theme_override_font_sizes/bold_italics_font_size = 24
theme_override_font_sizes/italics_font_size = 24
theme_override_font_sizes/mono_font_size = 24
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "[i]Touchscreen controls (License - MIT)[/i]

- Made by Marco Fazio

"
fit_content = true

[node name="CreditsCode6" type="RichTextLabel" parent="CreditsPanel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(1234, 0)
layout_mode = 2
theme_override_font_sizes/bold_italics_font_size = 24
theme_override_font_sizes/italics_font_size = 24
theme_override_font_sizes/mono_font_size = 24
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "[i]Toon shader (MIT License)[/i]

- Made by Hannah \"EMBYR\" Crawford.
- The shader code and all code snippets in this post are under MIT license and can be used freely.

"
fit_content = true

[node name="CreditsCode7" type="RichTextLabel" parent="CreditsPanel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(1234, 0)
layout_mode = 2
theme_override_font_sizes/bold_italics_font_size = 24
theme_override_font_sizes/italics_font_size = 24
theme_override_font_sizes/mono_font_size = 24
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "[i]Dither shader (MIT License)[/i]

Copyright (c) 2021 Sam Bigos
This shader is under MIT license.

"
fit_content = true

[node name="CreditsCode10" type="RichTextLabel" parent="CreditsPanel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(1234, 0)
layout_mode = 2
theme_override_font_sizes/bold_italics_font_size = 24
theme_override_font_sizes/italics_font_size = 24
theme_override_font_sizes/mono_font_size = 24
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "[i]Recoil System (MIT License)

- Copyright (c) 2024 AceSpectre

"
fit_content = true

[node name="CreditsArt" type="RichTextLabel" parent="CreditsPanel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(1234, 0)
layout_mode = 2
theme_override_font_sizes/bold_italics_font_size = 24
theme_override_font_sizes/italics_font_size = 24
theme_override_font_sizes/mono_font_size = 24
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "[b]Assets[/b]"
fit_content = true

[node name="CreditsArt1" type="RichTextLabel" parent="CreditsPanel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(1234, 0)
layout_mode = 2
theme_override_font_sizes/bold_italics_font_size = 24
theme_override_font_sizes/italics_font_size = 24
theme_override_font_sizes/mono_font_size = 24
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "[i]Models[/i]

MTF, Class-D and Scientist models are made by PurpleGoop and DrPri (CC-BY-SA 4.0)
Also there are some CC0 assets.
"
fit_content = true

[node name="CreditsArt2" type="RichTextLabel" parent="CreditsPanel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(1234, 0)
layout_mode = 2
theme_override_font_sizes/bold_italics_font_size = 24
theme_override_font_sizes/italics_font_size = 24
theme_override_font_sizes/mono_font_size = 24
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "[i]Sounds and music[/i]
- Robot vacuum cleaner.ogg by Eelke -- https://freesound.org/s/383372/ -- License: Attribution 4.0
- Elevator.ogg, EquatorialComplex.ogg - Kevin MacLeod - License CC-BY 3.0


"
fit_content = true

[connection signal="pressed" from="Title/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Title/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Title/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Title/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="CreditsPanel/CreditsBack" to="." method="_on_credits_back_pressed"]
